RESOLVED FIXED158997
WKWebView with no WKNavigationDelegate does not follow universal links
https://bugs.webkit.org/show_bug.cgi?id=158997
Summary WKWebView with no WKNavigationDelegate does not follow universal links
Sam Weinig
Reported 2016-06-21 14:26:49 PDT
WKWebView with no WKNavigationDelegate does not follow universal links
Attachments
Patch (9.49 KB, patch)
2016-06-21 14:30 PDT, Sam Weinig
no flags
Patch (8.62 KB, patch)
2016-06-21 21:40 PDT, Sam Weinig
no flags
Sam Weinig
Comment 1 2016-06-21 14:30:34 PDT
WebKit Commit Bot
Comment 2 2016-06-21 15:27:08 PDT
Comment on attachment 281774 [details] Patch Clearing flags on attachment: 281774 Committed r202296: <http://trac.webkit.org/changeset/202296>
WebKit Commit Bot
Comment 3 2016-06-21 15:27:11 PDT
All reviewed patches have been landed. Closing bug.
Sam Weinig
Comment 4 2016-06-21 17:07:55 PDT
Chris Dumez
Comment 5 2016-06-21 19:25:06 PDT
Heads-up, several of our bots seem to indicate this was a 12% membuster regression on Mac.
Chris Dumez
Comment 6 2016-06-21 20:16:28 PDT
Reverted r202296 for reason: Broke basic browsing in Safari Committed r202316: <http://trac.webkit.org/changeset/202316>
Sam Weinig
Comment 7 2016-06-21 21:40:08 PDT
Sam Weinig
Comment 8 2016-06-22 09:56:00 PDT
Note You need to log in before you can comment on or make changes to this bug.